# repo-readiness

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/repo_readiness/: __init__.py  __main__.py  checks.py  cli.py  github.py
tests/: test_cli.py
